consigruando o ESlint para poder ter mais q uma classe no mesmo arquivo, pelo fato do slide e slideNav

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "rules": {
       "no-param-reassign": 0,
       "import/extensions": 0,
+      "max-classes-per-file": false,
       "no-console": 0
     }
 }
